# Harmony-Com-Takehome

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: .env.example  package-lock.json  package.json  pyproject.toml
apps/api/src/: main.py  settings.py
apps/api/src/pipeline/: events.py  extract.py  fill.py  fill_acro.py  fill_io.py  fitzutil.py  form_maps.py  forms_assets.py  ingest.py  merge.py  paths.py  registry.py  run.py  state.py  verify.py
apps/api/src/routes/: jobs.py
apps/api/src/schema/: __init__.py  buyer.py  extract_schema.py  extracted.py  forms.py  verified.py  yes_no.py
apps/api/tests/: test_extract_confidence.py  test_fill_buttons.py  test_merge.py
apps/web/: .env.example  biome.json  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: download-panel.tsx  drop-zone.tsx  error-screen.tsx  review-form-476-6-section.tsx  review-form-476-6g-section.tsx  review-form-480-5-section.tsx  review-form-widgets.tsx  review-panel.tsx  stepper.tsx  terminal.tsx
apps/web/src/hooks/: use-job-stream.ts  use-review-form.ts
apps/web/src/lib/: api.ts  hcd-forms.ts  review-form-utils.ts  yes-no.ts
apps/web/src/styles/: globals.css
source-of-truth/: AI_WORKFLOW.md  ARCHITECTURE.md  DESIGN.md  README.md  STANDARDS.md  TECH_STACK.md  UX.md
source-of-truth/apps/api/: README.md
